--- a/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
+++ b/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
@@ -60,6 +60,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tonform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tonform.Designer.cs">
+      <DependentUpon>Tonform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TonSQL.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -70,6 +77,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tonform.resx">
+      <DependentUpon>Tonform.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
