--- a/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
+++ b/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
@@ -58,13 +58,27 @@
     <Compile Include="formchungcs.Designer.cs">
       <DependentUpon>formchungcs.cs</DependentUpon>
     </Compile>
+    <Compile Include="LopHoc_MonHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LopHoc_MonHoc.Designer.cs">
+      <DependentUpon>LopHoc_MonHoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLyLichThucHanhDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QuanLyLichThucHanhDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formchungcs.resx">
       <DependentUpon>formchungcs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LopHoc_MonHoc.resx">
+      <DependentUpon>LopHoc_MonHoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,6 +104,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="QuanLyLichThucHanhDataSet.xsc">
+      <DependentUpon>QuanLyLichThucHanhDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QuanLyLichThucHanhDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QuanLyLichThucHanhDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QuanLyLichThucHanhDataSet.xss">
+      <DependentUpon>QuanLyLichThucHanhDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Resources\anhLogIn.png" />
     <None Include="Resources\anhLog.png" />
     <None Include="Resources\z6642997480070_007cfe4b2b8382d29157f2e64e4a8b7d-removebg-preview.png" />
