--- a/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
+++ b/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChucNang.cs" />
+    <Compile Include="DataConnect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,13 +60,26 @@
     <Compile Include="formchungcs.Designer.cs">
       <DependentUpon>formchungcs.cs</DependentUpon>
     </Compile>
+    <Compile Include="GVBLL.cs" />
+    <Compile Include="hieu_GV_PM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hieu_GV_PM.Designer.cs">
+      <DependentUpon>hieu_GV_PM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PMBLL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tblGV.cs" />
+    <Compile Include="tblPM.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formchungcs.resx">
       <DependentUpon>formchungcs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="hieu_GV_PM.resx">
+      <DependentUpon>hieu_GV_PM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
