--- a/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
+++ b/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
@@ -61,6 +61,12 @@
     <Compile Include="FormBich.Designer.cs">
       <DependentUpon>FormBich.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormThongKePhieu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormThongKePhieu.Designer.cs">
+      <DependentUpon>FormThongKePhieu.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTimKiem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,11 +92,11 @@
       <DependentUpon>FormUpdateLTH.cs</DependentUpon>
     </Compile>
     <Compile Include="GVBLL.cs" />
-    <Compile Include="hieu_GV_PM.cs">
+    <Compile Include="form_hieu_GVPM.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hieu_GV_PM.Designer.cs">
-      <DependentUpon>hieu_GV_PM.cs</DependentUpon>
+    <Compile Include="form_hieu_GVPM.Designer.cs">
+      <DependentUpon>form_hieu_GVPM.cs</DependentUpon>
     </Compile>
     <Compile Include="LopHoc_MonHoc.cs">
       <SubType>Form</SubType>
@@ -114,6 +120,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tblGV.cs" />
+    <Compile Include="tblPM.cs" />
     <Compile Include="Tonform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +146,9 @@
     <EmbeddedResource Include="FormBich.resx">
       <DependentUpon>FormBich.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormThongKePhieu.resx">
+      <DependentUpon>FormThongKePhieu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTimKiem.resx">
       <DependentUpon>FormTimKiem.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,8 +161,8 @@
     <EmbeddedResource Include="FormUpdateLTH.resx">
       <DependentUpon>FormUpdateLTH.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="hieu_GV_PM.resx">
-      <DependentUpon>hieu_GV_PM.cs</DependentUpon>
+    <EmbeddedResource Include="form_hieu_GVPM.resx">
+      <DependentUpon>form_hieu_GVPM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LopHoc_MonHoc.resx">
       <DependentUpon>LopHoc_MonHoc.cs</DependentUpon>
