--- a/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
+++ b/codeC#/Quan_Ly_Lich_Thuc_Hanh_Phong_May/Quan_Ly_Lich_Thuc_Hanh_Phong_May.csproj
@@ -91,6 +91,12 @@
     <Compile Include="FormUpdateLTH.Designer.cs">
       <DependentUpon>FormUpdateLTH.cs</DependentUpon>
     </Compile>
+    <Compile Include="hieu_GVPM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hieu_GVPM.Designer.cs">
+      <DependentUpon>hieu_GVPM.cs</DependentUpon>
+    </Compile>
     <Compile Include="GVBLL.cs" />
     <Compile Include="form_hieu_GVPM.cs">
       <SubType>Form</SubType>
@@ -121,6 +127,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tblGV.cs" />
     <Compile Include="tblPM.cs" />
+    <Compile Include="Tonform2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tonform2.Designer.cs">
+      <DependentUpon>Tonform2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tonform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +173,9 @@
     <EmbeddedResource Include="FormUpdateLTH.resx">
       <DependentUpon>FormUpdateLTH.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="hieu_GVPM.resx">
+      <DependentUpon>hieu_GVPM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="form_hieu_GVPM.resx">
       <DependentUpon>form_hieu_GVPM.cs</DependentUpon>
     </EmbeddedResource>
@@ -177,6 +192,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tonform2.resx">
+      <DependentUpon>Tonform2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tonform.resx">
       <DependentUpon>Tonform.cs</DependentUpon>
